--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -71,6 +71,7 @@
             <ul class="dropdown-menu">
               <li class="nav-item"><a routerLink="/inventory" class="nav-link"><i class="fa fa-caret-right"></i> {{ 'HEADER.INVENTORY' | translate }}</a></li>
               <li class="nav-item"><a routerLink="/master-report/inventory" class="nav-link"><i class="fa fa-caret-right"></i> {{ 'HEADER.REPORT' | translate }}</a></li>
+              <li class="nav-item"><a routerLink="/damage" class="nav-link"><i class="fa fa-caret-right"></i> {{ 'HEADER.DAMAGE' | translate }}</a></li>
             </ul>
           </li>
         </div>
