--- a/src/app/home/purchase-list/purchase-list.component.html
+++ b/src/app/home/purchase-list/purchase-list.component.html
@@ -135,8 +135,7 @@
                 <td>{{ i+1 }}</td>
                 <td style="text-align: left;">
                   {{ item.medicine_type | slice:0:3 }}. {{ item.medicine_name }}<br />
-                  <span *ngIf="item.generic" class="small">{{ item.generic }}<br /></span><span
-                    class="small">{{ item.barcode }}</span>
+                  <small>{{ item.barcode }} <span *ngIf="config.enBatch">({{ item.batch_no }})</span></small>
                 </td>
                 <td>{{ item.quantity }}</td>
                 <td>{{ item.trade_price | number: "1.2-2"  }}</td>
