--- a/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
+++ b/src/app/home/master-report/master-inventory-report/master-inventory-report.component.html
@@ -81,8 +81,8 @@
                   <tr *ngFor="let item of inventoryList; let i='index';">
                       <td>{{ i+1 }}</td>
                       <td style="text-align: left;">
-                        {{ item.medicine_type | slice:0:3 }}. {{ item.medicine_name }}
-                        <span class="small">({{ item.brand }}) {{ item.generic }}</span>
+                        {{ item.medicine_type | slice:0:3 }}. {{ item.medicine_name }} <br>
+                        <small>{{ item.brand }} <span *ngIf="config.enBatch">({{ item.batch_no }})</span></small>
                       </td>
                       <td>
                         <p *ngIf="item.quantity<'0'">0</p>
