--- a/src/app/home/purchase/purchase.component.css
+++ b/src/app/home/purchase/purchase.component.css
@@ -133,5 +133,6 @@ label {
   background-color: #794c8a;
   color: white;
   border-radius: 8px;
-  margin: 25%;
+  margin: 20%;
+  margin-top: 40%;
 }
