--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -53,9 +53,9 @@
                         <div class="col-md-4">
                             <div class="form-group mb-0">
                                 <label for="quantity" class="sr-only">{{ 'Qty'  | translate }} </label>
-                                <input #cartQty type="number" class="form-control form-input-width-100" aria-describedby="AvailableQty"
+                                <input #cartQty type="number" class="form-control form-input-width-100 cart-quantity" aria-describedby="AvailableQty"
                                     id="quantity" name="quantity" (keydown.enter)="addToCart()" [(ngModel)]="cartItem.quantity"
-                                    placeholder="{{ 'Quantity'  | translate}}" (input)="getAvailableQuantity()" />
+                                    placeholder="{{ 'Quantity'  | translate}}" (input)="checkQuantity()" />
                             </div>
                             <button style="display: none" type="submit" class="btn btn-primary mb-0 add-medicine-btn">{{ 'Add' | translate }}</button>
                         </div>
@@ -99,7 +99,8 @@
                                 <div class="widget-content-wrapper">
                                 <div class="widget-content-left flex2">
                                     <div class="widget-heading">
-                                    {{ cart.medicine.brand_name }}
+                                      {{ cart.medicine.brand_name }} 
+                                      <small><span *ngIf="config.enBatch">({{ cart.batch_no }})</span></small>
                                     </div>
                                 </div>
                                 </div>
