--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -136,7 +136,7 @@
                                       <br>
                                       <i
                                         *ngIf="config.enSerialNo"
-                                        class="ace-icon fa fa-qrcode text-primary"
+                                        class="ace-icon fa fa-qrcode text-info"
                                         style="cursor: pointer;"
                                         (click)="toggleSerial(i)"
                                       >
