--- a/src/app/home/inventory/inventory.component.html
+++ b/src/app/home/inventory/inventory.component.html
@@ -77,6 +77,7 @@
                   <th class="td_text_align_left" width="50%">{{ 'Product Name' | translate }}</th>
                   <th>{{ 'Barcode' | translate }}</th>
                   <th>{{ 'Qty' | translate }}</th>
+                  <th *ngIf="config.enTP">{{ 'TP' | translate }} {{ currency }}</th>
                   <th>{{ 'CPU' | translate }} {{ currency }}</th>
                   <th>{{ 'RPU' | translate }} {{ currency }}</th>
                   <th>{{ 'Low Stock Alert Qty' | translate }}</th>
@@ -100,6 +101,7 @@
                     <p *ngIf="item.quantity<'0'">0</p>
                     <p *ngIf="item.quantity>='0'">{{ item.quantity }}</p>
                   </td>
+                  <td *ngIf="config.enTP"><span id='mrp{{ i }}'>{{ item.unit_price | number: "1.2-2" }}</span></td>
                   <td><span id='mrp{{ i }}'>{{ item.tp | number: "1.2-2" }}</span></td>
                   <td><span id='tp{{ i }}'>{{ item.mrp | number: "1.2-2" }}</span></td>
                   <td>
