--- a/src/app/home/sale/sale-list/sale-list.component.html
+++ b/src/app/home/sale/sale-list/sale-list.component.html
@@ -916,21 +916,23 @@
               <span class="pharmacy">{{ orderDetails.pharmacy }}</span>
             </h3>
 
-            <div [ngStyle]="{ color: colorCode }">
+            <strong>
+              <div [ngStyle]="{ color: colorCode }">
               {{ orderDetails.branch_name }}, {{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}
-            </div>
+              </div>
 
-            <div [ngStyle]="{ color: colorCode }">
-              {{ 'For Order' | translate }}: {{ orderDetails.branch_mobile }}
-            </div>
+              <div [ngStyle]="{ color: colorCode }">
+                {{ 'For Order' | translate }}: {{ orderDetails.branch_mobile }}
+              </div>
 
-            <div *ngIf="orderDetails.branch_contact_person_mobile" [ngStyle]="{ color: colorCode }">
-              {{ 'For Service' | translate }}: {{ orderDetails.branch_contact_person_mobile }}
-            </div>
+              <div *ngIf="orderDetails.branch_contact_person_mobile" [ngStyle]="{ color: colorCode }">
+                {{ 'For Service' | translate }}: {{ orderDetails.branch_contact_person_mobile }}
+              </div>
 
-            <div [ngStyle]="{ color: colorCode }">
-              {{ 'Invoice by' | translate }} : {{ orderDetails.created_by }}
-            </div>
+              <div [ngStyle]="{ color: colorCode }">
+                {{ 'Invoice by' | translate }} : {{ orderDetails.created_by }}
+              </div>
+            </strong>
           </div>
 
           <!-- Right Section: Invoice + Customer -->
@@ -1088,6 +1090,7 @@
                 <strong>{{ priceInWord }}</strong>
               </td>
             </tr>
+            
           </tfoot>
           <ng-template #emptyItem>
             <tbody>
