--- a/src/app/home/sale/sale-list/sale-list.component.html
+++ b/src/app/home/sale/sale-list/sale-list.component.html
@@ -692,6 +692,18 @@
               <td *ngIf="tpShow">&nbsp;</td>
               <td *ngIf="profitShow">&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold">
+                {{ 'Paid Amount' | translate }}
+              </td>
+              <td style="text-align: right;padding-right: 2%">
+                {{ currency }} {{ (orderDetails.total_payble_amount - orderDetails.total_due_amount) | number: "1.2-2"}}
+              </td>
+            </tr>
+            <tr *ngIf="orderDetails.total_due_amount">
+              <td colspan="2">&nbsp;</td>
+              <td *ngIf="freeQtyShow">&nbsp;</td>
+              <td *ngIf="tpShow">&nbsp;</td>
+              <td *ngIf="profitShow">&nbsp;</td>
+              <td colspan="2" style="text-align: left;font-weight: bold">
                 {{ 'Due Amount' | translate }}
               </td>
               <td style="text-align: right;padding-right: 2%">
@@ -913,26 +925,24 @@
           <!-- Left Section: Branch / Pharmacy Info -->
           <div id="customer-info" class="col-6 customer-info">
             <h3>
-              <span class="pharmacy">{{ orderDetails.pharmacy }}</span>
+              <strong><span class="pharmacy">{{ orderDetails.pharmacy }}</span></strong>
             </h3>
 
-            <strong>
-              <div [ngStyle]="{ color: colorCode }">
-              {{ orderDetails.branch_name }}, {{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}
-              </div>
+            <div [ngStyle]="{ color: colorCode }">
+              <strong>{{ orderDetails.branch_name }}, {{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}</strong>
+            </div>
 
-              <div [ngStyle]="{ color: colorCode }">
-                {{ 'For Order' | translate }}: {{ orderDetails.branch_mobile }}
-              </div>
+            <div [ngStyle]="{ color: colorCode }">
+              <strong>{{ 'For Order' | translate }}:</strong> {{ orderDetails.branch_mobile }}
+            </div>
 
-              <div *ngIf="orderDetails.branch_contact_person_mobile" [ngStyle]="{ color: colorCode }">
-                {{ 'For Service' | translate }}: {{ orderDetails.branch_contact_person_mobile }}
-              </div>
+            <div *ngIf="orderDetails.branch_contact_person_mobile" [ngStyle]="{ color: colorCode }">
+              <strong>{{ 'For Service' | translate }}:</strong> {{ orderDetails.branch_contact_person_mobile }}
+            </div>
 
-              <div [ngStyle]="{ color: colorCode }">
-                {{ 'Invoice by' | translate }} : {{ orderDetails.created_by }}
-              </div>
-            </strong>
+            <div [ngStyle]="{ color: colorCode }">
+              <strong>{{ 'Invoice by' | translate }} :</strong> {{ orderDetails.created_by }}
+            </div>
           </div>
 
           <!-- Right Section: Invoice + Customer -->
@@ -950,8 +960,9 @@
               class="d-inline-block mt-2 p-1"
               [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }"
             >
-              # {{ orderDetails.invoice }} |
-              {{ 'DATE' | translate }}: {{ orderDetails.created_at }}
+              # {{ orderDetails.invoice }} 
+              <span style="background-color: white;" >&nbsp;</span>
+              <span style="font-style: italic;">{{ 'DATE' | translate }}: {{ orderDetails.created_at }}</span>
             </span>
 
             <div>
@@ -964,10 +975,10 @@
               </div>
 
               <div class="mt-1">
-                <strong>{{ orderDetails.customer_name }}</strong>
+                <strong>Customer:</strong> {{ orderDetails.customer_name }}
               </div>
 
-              <div>{{ orderDetails.customer_mobile }}</div>
+              <div><strong>Mobile: </strong> {{ orderDetails.customer_mobile }}</div>
             </div>
           </div>
 
@@ -1057,18 +1068,32 @@
                 {{ currency }} {{ orderDetails.total_due_amount | number: "1.2-2" }}
               </td>
             </tr>
-            <tr [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
-              <td colspan="2" class="thanku">
+            <tr [ngStyle]="{ backgroundColor: colorCodeLight, color: colorCodeText }">
+              <td colspan="2" class="thanku"  [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
                 {{ 'THANK YOU FOR YOUR BUSINESS' | translate }}
               </td>
               <td *ngIf="freeQtyShow">&nbsp;</td>
               <td *ngIf="tpShow">&nbsp;</td>
               <td *ngIf="profitShow">&nbsp;</td>
-              <td colspan="2" style="text-align: left;font-weight: bold">
+              <td colspan="2" style="text-align: left;font-weight: bold" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
                 {{ 'Total' | translate }}
               </td>
-              <td style="text-align: right;padding-right: 2%">
+              <td style="text-align: right;padding-right: 2%" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
                 {{ currency }} {{ orderDetails.total_payble_amount | number: "1.2-2"}}
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2">&nbsp;</td>
+              <td *ngIf="freeQtyShow">&nbsp;</td>
+              <td *ngIf="tpShow">&nbsp;</td>
+              <td *ngIf="profitShow">&nbsp;</td>
+              <td colspan="2" style="text-align: left;font-weight: bold">
+                Paid Amount
+              </td>
+              <td style="text-align: right;padding-right: 2%">
+                {{ currency }}&nbsp;{{
+                    (orderDetails.total_payble_amount - orderDetails.total_due_amount) | number: "1.2-2"
+                  }}
               </td>
             </tr>
             <tr *ngIf="profitShow">
