--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -679,6 +679,18 @@
               <td *ngIf="tpShow">&nbsp;</td>
               <td *ngIf="profitShow">&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold">
+                {{ 'Paid Amount' | translate }}
+              </td>
+              <td style="text-align: right;padding-right: 2%">
+                {{ currency }} {{ (orderDetails.total_payble_amount - orderDetails.total_due_amount) | number: "1.2-2"}}
+              </td>
+            </tr>
+            <tr *ngIf="orderDetails.total_due_amount">
+              <td colspan="2">&nbsp;</td>
+              <td *ngIf="freeQtyShow">&nbsp;</td>
+              <td *ngIf="tpShow">&nbsp;</td>
+              <td *ngIf="profitShow">&nbsp;</td>
+              <td colspan="2" style="text-align: left;font-weight: bold">
                 {{ 'Due Amount' | translate }}
               </td>
               <td style="text-align: right;padding-right: 2%">
@@ -898,26 +910,24 @@
           <!-- Left Section: Branch / Pharmacy Info -->
           <div id="customer-info" class="col-6 customer-info">
             <h3>
-              <span class="pharmacy">{{ orderDetails.pharmacy }}</span>
+              <strong><span class="pharmacy">{{ orderDetails.pharmacy }}</span></strong>
             </h3>
 
-            <strong>
-              <div [ngStyle]="{ color: colorCode }">
-                {{ orderDetails.branch_name }}, {{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}
-              </div>
+            <div [ngStyle]="{ color: colorCode }">
+              <strong>{{ orderDetails.branch_name }}, {{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}</strong>
+            </div>
 
-              <div [ngStyle]="{ color: colorCode }">
-                {{ 'For Order' | translate }}: {{ orderDetails.branch_mobile }}
-              </div>
+            <div [ngStyle]="{ color: colorCode }">
+              <strong>{{ 'For Order' | translate }}:</strong> {{ orderDetails.branch_mobile }}
+            </div>
 
-              <div *ngIf="orderDetails.branch_contact_person_mobile" [ngStyle]="{ color: colorCode }">
-                {{ 'For Service' | translate }}: {{ orderDetails.branch_contact_person_mobile }}
-              </div>
+            <div *ngIf="orderDetails.branch_contact_person_mobile" [ngStyle]="{ color: colorCode }">
+              <strong>{{ 'For Service' | translate }}:</strong> {{ orderDetails.branch_contact_person_mobile }}
+            </div>
 
-              <div [ngStyle]="{ color: colorCode }">
-                {{ 'Invoice by' | translate }} : {{ orderDetails.created_by }}
-              </div>
-            </strong>
+            <div [ngStyle]="{ color: colorCode }">
+              <strong>{{ 'Invoice by' | translate }} :</strong> {{ orderDetails.created_by }}
+            </div>
           </div>
 
           <!-- Right Section: Invoice + Customer -->
@@ -935,8 +945,9 @@
               class="d-inline-block mt-2 p-1"
               [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }"
             >
-              # {{ orderDetails.invoice }} |
-              {{ 'DATE' | translate }}: {{ orderDetails.created_at }}
+              # {{ orderDetails.invoice }} 
+              <span style="background-color: white;" >&nbsp;</span>
+              <span style="font-style: italic;">{{ 'DATE' | translate }}: {{ orderDetails.created_at }}</span>
             </span>
 
             <div>
@@ -949,27 +960,28 @@
               </div>
 
               <div class="mt-1">
-                <strong>{{ orderDetails.customer_name }}</strong>
+                <strong>Customer:</strong> {{ orderDetails.customer_name }}
               </div>
 
-              <div>{{ orderDetails.customer_mobile }}</div>
+              <div><strong>Mobile: </strong> {{ orderDetails.customer_mobile }}</div>
             </div>
           </div>
 
         </div>
       </header>
+
       <main style="margin-bottom: 1px">
         <table class="preview">
           <thead>
             <tr>
               <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:5%" class="unit">#</th>
-              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:30%;text-align: left">Product</th>
-              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%">Qty</th>
-              <th *ngIf="freeQtyShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%">Free(Qty)</th>
-              <th *ngIf="tpShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">CPU({{ currency }})</th>
-              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">Price({{ currency }})</th>
-              <th *ngIf="profitShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">Profit({{ currency }})</th>
-              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:15%;text-align: right;padding-right: 2%">Total({{ currency }})</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:30%;text-align: left">{{ 'Product' | translate }}</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%">{{ 'Qty' | translate }}</th>
+              <th *ngIf="freeQtyShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%">{{ 'Free' | translate }}({{ 'Qty' | translate }})</th>
+              <th *ngIf="tpShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">{{ 'CPU' | translate }}{{ currency }}</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">{{ 'Price' | translate }}{{ currency }}</th>
+              <th *ngIf="profitShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">{{ 'Profit' | translate }}{{ currency }}</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:15%;text-align: right;padding-right: 2%">{{ 'Total' | translate }}{{ currency }}</th>
             </tr>
           </thead>
           <tbody *ngIf="
@@ -995,7 +1007,7 @@
               </tr>
             </ng-container>
             <tr>
-              <td colspan="2" class="text-center"><strong>Total</strong></td>
+              <td colspan="2" class="text-center"><strong>{{ 'Total' | translate }}</strong></td>
               <td class="text-center"><strong>{{ orderDetails.total_qty }}</strong></td>
               <td *ngIf="freeQtyShow" class="text-center"><strong>{{ orderDetails.total_free_qty }}</strong></td>
               <td *ngIf="tpShow">&nbsp;</td>
@@ -1011,7 +1023,7 @@
               <td *ngIf="tpShow">&nbsp;</td>
               <td *ngIf="profitShow">&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold;">
-                Subtotal
+                {{ 'Subtotal' | translate }}
               </td>
               <td style="text-align: right;padding-right: 2%">
                 {{ currency }}&nbsp;{{ orderDetails.sub_total | number: "1.2-2" }}
@@ -1023,7 +1035,7 @@
               <td *ngIf="tpShow">&nbsp;</td>
               <td *ngIf="profitShow">&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold;">
-                Total Discount
+                {{ 'Total Discount' | translate }}
               </td>
               <td style="text-align: right;padding-right: 2%">
                 {{ currency }}&nbsp;{{ orderDetails.discount | number: "1.2-2" }}
@@ -1041,19 +1053,31 @@
                 {{ currency }} {{ orderDetails.total_due_amount | number: "1.2-2" }}
               </td>
             </tr>
-            <tr [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
-              <td colspan="2" class="thanku">
-                THANK YOU FOR YOUR BUSINESS
+            <tr [ngStyle]="{ backgroundColor: colorCodeLight, color: colorCodeText }">
+              <td colspan="2" class="thanku"  [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
+                {{ 'THANK YOU FOR YOUR BUSINESS' | translate }}
               </td>
               <td *ngIf="freeQtyShow">&nbsp;</td>
               <td *ngIf="tpShow">&nbsp;</td>
               <td *ngIf="profitShow">&nbsp;</td>
+              <td colspan="2" style="text-align: left;font-weight: bold" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
+                {{ 'Total' | translate }}
+              </td>
+              <td style="text-align: right;padding-right: 2%" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
+                {{ currency }} {{ orderDetails.total_payble_amount | number: "1.2-2"}}
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2">&nbsp;</td>
+              <td *ngIf="freeQtyShow">&nbsp;</td>
+              <td *ngIf="tpShow">&nbsp;</td>
+              <td *ngIf="profitShow">&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold">
-                TOTAL
+                Paid Amount
               </td>
               <td style="text-align: right;padding-right: 2%">
                 {{ currency }}&nbsp;{{
-                    orderDetails.total_payble_amount | number: "1.2-2"
+                    (orderDetails.total_payble_amount - orderDetails.total_due_amount) | number: "1.2-2"
                   }}
               </td>
             </tr>
@@ -1063,7 +1087,7 @@
               <td *ngIf="tpShow">&nbsp;</td>
               <td *ngIf="profitShow">&nbsp;</td>
               <td colspan="2" style="text-align: left;font-weight: bold">
-                Net Profit
+                {{ 'Net Profit' | translate }}
               </td>
               <td style="text-align: right;padding-right: 2%">
                 {{ currency }}&nbsp;{{
@@ -1076,12 +1100,13 @@
                 <strong>{{ priceInWord }}</strong>
               </td>
             </tr>
+            
           </tfoot>
           <ng-template #emptyItem>
             <tbody>
               <tr>
                 <td colspan="8">
-                  <h5 class="text-center">No Item Found</h5>
+                  <h5 class="text-center">{{ 'No Item Found' | translate }}</h5>
                 </td>
               </tr>
             </tbody>
