--- a/src/app/home/sale/sale-list/sale-list.component.html
+++ b/src/app/home/sale/sale-list/sale-list.component.html
@@ -496,7 +496,7 @@
           </div> -->
           <div class="form-group mx-sm-3 mb-2">
             <input type="number" max="{{ saleItem.quantity }}" id="form-field-1-2" name="new_quantity" [(ngModel)]="returnItem.new_quantity"
-              placeholder="Quantity" class="form-control" />
+              placeholder="Quantity" min="1" class="form-control" />
           </div>
           <div class="form-group mx-sm-3 mb-2">
             <button type="submit" class="btn btn-primary">
