--- a/src/app/home/purchase/purchase.component.html
+++ b/src/app/home/purchase/purchase.component.html
@@ -70,7 +70,7 @@
                         name="unit_price" 
                         #unitPrice 
                         [(ngModel)]="purchaseItem.unit_price" 
-                        (keydown.enter)="gotoBoxMrp()" 
+                        (keydown.enter)="gotoCPU()" 
                         placeholder="" 
                         type="number" 
                         class="form-control"
