--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -345,7 +345,7 @@
                             <tr class="sub-tax border-table-tr">
                                 <td class="availableQty">{{ 'Payment Type' | translate }} 
                                   <span *ngIf="config.enEMI"> &nbsp; 
-                                    <input type="radio" [(ngModel)]="order.payment_type" value="emi"> {{ 'EMI' | translate }}
+                                    <input type="radio" [(ngModel)]="order.payment_type" value="emi" (change)="onPaymentTypeChange($event)"> {{ 'EMI' | translate }}
                                   </span>
                                 </td>
                                 <td>
@@ -358,7 +358,7 @@
                             <tr class="sub-tax border-table-tr" *ngIf="order.payment_type === 'emi'">
                                 <td class="availableQty">{{ 'Installments' | translate }}</td>
                                 <td>
-                                    <input type="number" class="form-control" [(ngModel)]="order.installments" (input)="getEmiAmount()" (keydown.enter)="goTendered()" />
+                                    <input #installment type="number" class="form-control" [(ngModel)]="order.installments" (input)="getEmiAmount()" (keydown.enter)="goTendered()" />
                                     <span>{{ ( emiAmount | number: "1.2-2") }} /-</span>
                                 </td>
                             </tr>
