--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -110,6 +110,7 @@
               <li class="nav-item"><a routerLink="/settings/products" class="nav-link"><i class="fa fa-caret-right"></i> {{ 'HEADER.PRODUCTS' | translate }}</a></li>
               <li class="nav-item"><a routerLink="/products/settings" class="nav-link"><i class="fa fa-caret-right"></i> {{ 'HEADER.BRANDS_TYPES' | translate }}</a></li>
               <li class="nav-item"><a routerLink="/supplier" class="nav-link"><i class="fa fa-caret-right"></i> {{ 'HEADER.SUPPLIERS' | translate }}</a></li>
+              <li class="nav-item"><a routerLink="/customer" class="nav-link"><i class="fa fa-caret-right"></i> {{ 'HEADER.CUSTOMERS' | translate }}</a></li>
             </ul>
           </li>
         </div>
