--- a/src/app/home/customer/customer.component.html
+++ b/src/app/home/customer/customer.component.html
@@ -17,6 +17,7 @@
               <th>{{ 'Name' | translate }}</th>
               <th>{{ 'Email' | translate }}</th>
               <th>{{ 'Mobile' | translate }}</th>
+              <th>{{ 'Balance' | translate }}</th>
               <th>{{ 'Address' | translate }}</th>
               <th>{{ 'Status' | translate }}</th>
               <th>{{ 'Action' | translate }}</th>
@@ -34,6 +35,7 @@
               <td>{{ item.name }}</td>
               <td>{{ item.email }}</td>
               <td>{{ item.mobile }}</td>
+              <td>{{ item.balance }}</td>
               <td>{{ item.address }}</td>
               <td>{{ item.status }}</td>
               <td>
